Increase contrast in south theme for links. No longer use same mustard color than buttons but use a red-mustard that looks stronger

--- a/public/themes/south.css
+++ b/public/themes/south.css
@@ -4,7 +4,7 @@
 
 :root {
   --body-bg: #fdfdfd;
-  --link-color: #ba8c58;
+  --link-color: #993300;
   --hr-border: 1px solid #ba8c58;
   --error-color: #ee2222;
   --success-color: #338833;
